backend-app/configuration/openshift/mysql-local-dev-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: mysql-local
  name: mysql-local
  namespace: local-dev
spec:
  selector:
    app: mysql-local
    deploymentconfig: mysql-local
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: mysql-local
        deploymentconfig: mysql-local
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT
              value: 
          image: >-
            centos/mysql-57-centos7@sha256:8d750876687d9fb0adf46020e38cd43165b906208d2e81088b3a13213e751df3
          imagePullPolicy: Always
          name: mysql-local
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql/data
              name: mysqldata
      restartPolicy: Always
      volumes:
        - name: mysqldata
          persistentVolumeClaim:
            claimName: pv0080
