backend-app/configuration/openshift/svc-mysql-57-centos7.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-57-centos7
  name: mysql-57-centos7
  namespace: everything-dev
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql-57-centos7
    deploymentconfig: mysql-57-centos7
  type: ClusterIP
