backend-app/configuration/openshift/route-everything-dev.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: everything-dev
  name: everything-dev
  namespace: everything-dev
spec:
  host: everything-dev.192.168.99.100.nip.io
  to:
    kind: Service
    name: everything-dev
    weight: 100
