backend-app/configuration/openshift/route-mysql-57-centos7.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: mysql-57-centos7
  name: mysql-57-centos7
  namespace: everything-dev
spec:
  host: mysql-57-centos7.192.168.99.100.nip.io
  to:
    kind: Service
    name: mysql-57-centos7
    weight: 100
